--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
           <img width="100" src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202410/three-indian-schools-win-2024-worlds-best-school-prizes-260526243-16x9_0.jpg?VersionId=.sY9X0v3Id534bN40LBl_sqX623_609m&size=690:388" class="d-block w-100" alt="..."style="height: 50vh;">
         </div>
         <div class="carousel-item">
-          <img width="100" src="https://media.licdn.com/dms/image/v2/D4D12AQFz7n-GsHJ_9w/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1656479767937?e=2147483647&v=beta&t=WDzb5b20f9AjdB1ADvwwXPtAvrTcbi1d3PyIaT1geQQ" class="d-block w-100" style="height: 50vh;" alt="...">
-        </div>
+   <img width="100" src="./Screenshot 2025-07-06 014020.png" class="d-block w-100" style="height: 50vh;" alt="...">        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
